Fix modal z-index

--- a/documentation.sass
+++ b/documentation.sass
@@ -16,3 +16,6 @@
 @import '_sass/switch.sass'
 @import '_sass/timeline.sass'
 @import '_sass/tooltip.sass'
+
+.modal
+  z-index: 40
